# data-engineer-jobs

./:    .gitignore  Makefile  README.md  ingestion_sources.dev.json  pyproject.toml  response.json
data/: vocabulary_recommendations.json
data/local/: enrichment_results_pass3_20251206_133434.json  enrichment_results_pass3_20251206_143852.json
docs/: AI_ENRICHMENT_TECHNICAL_GUIDE.md  LOCAL_DATA_STRUCTURE.md  README_SKILLS_DETECTION.md  ai-enrichment-architecture.md  bright-data.md  companies-ingestion-architecture.md  gold_features_metrics.md  silver_schema.md  skills_detection_insights.md  skills_detection_plan.md
docs/planning/: gold-layer-data-strategy.md  gold-layer-dbt-implementation.md  gold-layer-modeling.md  silver-layer-schema.md
infra/policies/: lambda-trigger-policy.json
infra/scripts/: build-layer.sh  build-skills.sh  sync-ssm-secrets.sh
infra/secrets/: secrets.env.example
makefiles/: ai.mk  build.mk  dev.mk  etl.mk  infra.mk
notebooks/: aienrichment_silvery.ipynb  evaluation_analysis.ipynb
notebooks/eda/: skills_analysis.ipynb
notebooks/exports/: all_fields_20251207_220945.csv  all_fields_20251208_002129.csv  executive_summary_20251207_220945.md  executive_summary_20251208_002129.md  executive_summary_20251211_204018.md  field_type_metrics_20251207_220945.csv  field_type_metrics_20251208_002129.csv  high_agreement_fields_20251207_220945.csv  high_agreement_fields_20251208_002129.csv  low_agreement_fields_20251207_220945.csv  low_agreement_fields_20251208_002129.csv  (+4 more)
reports/: SUMMARY_ALL_JOBS.md  evaluation_4323400548.md  evaluation_4325829597.md  evaluation_4325839911.md  evaluation_4325889818.md  evaluation_4325939213.md  evaluation_4325939525.md  evaluation_4325948158.md  evaluation_4326005551.md  evaluation_4342313220.md  evaluation_4342323073.md
scripts/: analyze_pass3_vocabulary.py  evaluate_models.py  fetch_and_enrich.py  test_enrichment_local.py  test_lambda_etl_local.py
tests/: test_delta_local.py
(+5148 files in other folders)
