[project]
name = "data-engineer-jobs"
version = "0.1.0"
description = ""
authors = [
    {name = "Geda Valentim",email = "gedalias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "boto3 (>=1.41.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "lru-cache (>=0.2.3,<0.3.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[project.optional-dependencies]
# Glue runtime - mínimo necessário para Lambda layer
glue = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "pyarrow (>=18.0.0,<19.0.0)"
]

# Local development - análise, notebooks, testes
local = [
    "pyspark (>=4.0.1,<5.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "pyarrow (>=18.0.0,<19.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "seaborn (>=0.13.0,<0.14.0)",
    "scipy (>=1.14.0,<2.0.0)",
    "jupyter (>=1.0.0,<2.0.0)",
    "ipykernel (>=6.29.0,<7.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "fastapi (>=0.124.0,<0.125.0)",
    "delta-spark (>=4.0.0,<5.0.0)",
    "strawberry-graphql[fastapi] (>=0.252.0)",
    "uvicorn (>=0.32.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"